--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -18,22 +18,16 @@
     <header>
         <img src="images/perfil.jpeg" alt="foto de perfil de Mireli" />
         <h3>Mireli Oliveira</h3>
-        <p>Desenvolvedora Front-End</p>
+        <p> QA | Software Enginner </p>
     </header>
     <main>
-        <a href= "https://www.linkedin.com/in/mireli-oliveira-3b2635242/"target="_blank">LinkedIn</a>
+        <a href= "https://www.linkedin.com/in/mireli-oliveira/"target="_blank">LinkedIn</a>
         <a href="https://github.com/mirel9342" target="_blank">Github</a>
         <a href="malito:omireli300@gmail.com">E-Mail</a>
-        <a href="public/ Curriculo.pdf">Curriculo</a>
-        <a href="https://www.instagram.com/mireliolv/"   alt="instagram">Instagram</a>
+        <a href="public/_Currículo_Mireli.pdf">Curriculo</a>
+        <a href="https://www.instagram.com/_mirelio_/"   alt="instagram">Instagram</a>
+
     </main>
 </section>
- 
-</body>
-
-
-</html>
-
-    
 </body>
 </html>
