--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <a href="malito:omireli300@gmail.com">E-Mail</a>
         <a href="public/_Currículo_Mireli.pdf">Curriculo</a>
         <a href="https://www.instagram.com/_mirelio_/"   alt="instagram">Instagram</a>
+        <a href="https://wa.me/5531992065963" alt="WhatsApp">WhatsApp</a>
 
     </main>
 </section>
