--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <main>
         <a href= "https://www.linkedin.com/in/mireli-oliveira/"target="_blank">LinkedIn</a>
         <a href="https://github.com/mirel9342" target="_blank">Github</a>
+        <a href="CV - Mireli.Gonçalves.pdf" target="_blank">Currículo</a>
         <a href="mailto:omireli300@gmail.com">E-Mail</a>
         <a href="https://www.instagram.com/_mirelio_/" alt="instagram">Instagram</a>
     </main>
